--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 name: Data science lab
 description: Scientific updates on knowledge representation, reasoning and recommendation from the Data Science lab at the Dong-A University
 #url: https://datascience-labs.github.io/
-url : https://www.datasciencelabs.org
+url: https://www.datasciencelabs.org
+baseurl: ''
 
 markdown: kramdown
 permalink: /:categories/:title/
