--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ exclude:
   - "Gemfile.lock"
 
 projects:
-  - "developsu/debs2022gc"
+  # - "developsu/debs2022gc"
   # - "datascience-labs/air-pollutant-monitor"
   - "jhparkland/Green-Car-Charging-Station-Site-Selection"
   - "jhparkland/Data_Analytics_for_Age_friendly_busan"
