--- a/.github/workflows/update_projects.yml
+++ b/.github/workflows/update_projects.yml
@@ -10,11 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: clupprich/ruby-build-action@master
-      id: ruby
+    - uses: actions/checkout@v3
+    - uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.7.6
+        ruby-version: '2.7.6' # Not needed with a .ruby-version file
+        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - run: bundle exec rake
     - name: Print version
       run: ${{ steps.ruby.outputs.ruby-path }} --version
     - name: Update projects
