--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,9 +19,6 @@ jobs:
   test:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ruby-version: ['2.6', '2.7', '3.0']
 
     steps:
     - uses: actions/checkout@v3
@@ -31,10 +28,8 @@ jobs:
     # uses: ruby/setup-ruby@v1
       uses: ruby/setup-ruby@ee2113536afb7f793eed4ce60e8d3b26db912da4 # v1.127.0
       with:
-        ruby-version: ${{ matrix.ruby-version }}
+        ruby-version: 2.7
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - name: Run tests
-      run: bundle exec rake
     - name: Update projects
       run: ruby update-and-preprocess.rb
       
