--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,6 @@ exclude:
   - "Gemfile.lock"
 
 projects:
-  - "datascience-labs/debs2022gc"
+  - "developsu/debs2022gc"
   - "jhparkland/Green-Car-Charging-Station-Site-Selection"
   - "jhparkland/Data_Analytics_for_Age_friendly_busan"
