--- a/_config.yml
+++ b/_config.yml
@@ -48,3 +48,4 @@ projects:
   - "developsu/debs2022gc"
   - "jhparkland/Green-Car-Charging-Station-Site-Selection"
   - "jhparkland/Data_Analytics_for_Age_friendly_busan"
+  - "datascience-labs/conrec"
