--- a/_config.yml
+++ b/_config.yml
@@ -49,3 +49,4 @@ projects:
   - "jhparkland/Green-Car-Charging-Station-Site-Selection"
   - "jhparkland/Data_Analytics_for_Age_friendly_busan"
   - "datascience-labs/conrec"
+  - "FarmingWon/Balance_Up"
