--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,67 @@
 ---
+- repo: FarmingWon/Balance_Up
+  title: Balance_Up
+  owner: FarmingWon
+  description: Employment information recommendation based on Life Balance
+  url: "/projects/Balance_Up/"
+  contributors:
+  - login: FarmingWon
+    avatar: https://avatars.githubusercontent.com/u/98411696?v=4&s=50
+    url: https://github.com/FarmingWon
+  - login: jmango61
+    avatar: https://avatars.githubusercontent.com/u/100738522?v=4&s=50
+    url: https://github.com/jmango61
+  commits:
+  - date: 2023-08-14 09:12:43.000000000 Z
+    message: Update README.md
+    url: https://github.com/FarmingWon/Balance_Up/commit/878d336579778ed2136c40af0e0085bebb2c404e
+    author_login: jmango61
+    author_url: https://github.com/jmango61
+  - date: 2023-08-14 09:06:39.000000000 Z
+    message: Add files via upload
+    url: https://github.com/FarmingWon/Balance_Up/commit/ba173182cde716dd54143b7be74ba312945e7276
+    author_login: FarmingWon
+    author_url: https://github.com/FarmingWon
+  - date: 2023-08-14 09:04:24.000000000 Z
+    message: Initial commit
+    url: https://github.com/FarmingWon/Balance_Up/commit/958a09418d0ea124620ffeac2182c71ee569a33a
+    author_login: FarmingWon
+    author_url: https://github.com/FarmingWon
+- repo: datascience-labs/conrec
+  title: conrec
+  owner: datascience-labs
+  description:
+  url: "/projects/conrec/"
+  contributors:
+  - login: chunsejin
+    avatar: https://avatars.githubusercontent.com/u/2449416?v=4&s=50
+    url: https://github.com/chunsejin
+  commits:
+  - date: 2023-08-14 06:12:41.000000000 Z
+    message: Update readme.md
+    url: https://github.com/datascience-labs/conrec/commit/0ea619457104efe02194bc1d0bf991146fd06162
+    author_login: chunsejin
+    author_url: https://github.com/chunsejin
+  - date: 2023-08-14 06:12:18.000000000 Z
+    message: Rename index.md to readme.md
+    url: https://github.com/datascience-labs/conrec/commit/06c96d0fb1d8f1a0c3b82e16203513fb974eb9c7
+    author_login: chunsejin
+    author_url: https://github.com/chunsejin
+  - date: 2023-08-14 06:11:29.000000000 Z
+    message: updates
+    url: https://github.com/datascience-labs/conrec/commit/40fdbbd73ef52177e3d006421cab2459fb42be6e
+    author_login: chunsejin
+    author_url: https://github.com/chunsejin
+  - date: 2023-08-08 13:16:01.000000000 Z
+    message: Update README.md
+    url: https://github.com/datascience-labs/conrec/commit/1b5f367b1e268d2f87d7c2dc671ff3f2beaeb6f4
+    author_login: chunsejin
+    author_url: https://github.com/chunsejin
+  - date: 2023-08-07 22:41:46.000000000 Z
+    message: Add files via upload
+    url: https://github.com/datascience-labs/conrec/commit/756feaab9dd32135f07e041f8357ad241d7a92ee
+    author_login: chunsejin
+    author_url: https://github.com/chunsejin
 - repo: developsu/debs2022gc
   title: debs2022gc
   owner: developsu
@@ -111,31 +174,6 @@
     url: https://github.com/jhparkland/Data_Analytics_for_Age_friendly_busan/commit/ebcd2d944347f686d20128bad81be0b4895bf6c7
     author_login: jhparkland
     author_url: https://github.com/jhparkland
-- repo: datascience-labs/conrec
-  title: conrec
-  owner: datascience-labs
-  description:
-  url: "/projects/conrec/"
-  contributors:
-  - login: chunsejin
-    avatar: https://avatars.githubusercontent.com/u/2449416?v=4&s=50
-    url: https://github.com/chunsejin
-  commits:
-  - date: 2023-08-08 13:16:01.000000000 Z
-    message: Update README.md
-    url: https://github.com/datascience-labs/conrec/commit/1b5f367b1e268d2f87d7c2dc671ff3f2beaeb6f4
-    author_login: chunsejin
-    author_url: https://github.com/chunsejin
-  - date: 2023-08-07 22:41:46.000000000 Z
-    message: Add files via upload
-    url: https://github.com/datascience-labs/conrec/commit/756feaab9dd32135f07e041f8357ad241d7a92ee
-    author_login: chunsejin
-    author_url: https://github.com/chunsejin
-  - date: 2023-08-07 22:40:34.000000000 Z
-    message: Initial commit
-    url: https://github.com/datascience-labs/conrec/commit/7a2c55b0541af9a1cf6020212518d81a423f4849
-    author_login: chunsejin
-    author_url: https://github.com/chunsejin
 - repo: jhparkland/Green-Car-Charging-Station-Site-Selection
   title: Green-Car-Charging-Station-Site-Selection
   owner: jhparkland
