team, project, blog 수정
1. 신규 석사과정 등록
2. alumni 업데이트
2. project 추가
3. blog 구분선 오류 개선
4. papers 구분선 추가

--- a/_config.yml
+++ b/_config.yml
@@ -50,3 +50,7 @@ projects:
   - "jhparkland/Data_Analytics_for_Age_friendly_busan"
   - "datascience-labs/conrec"
   - "FarmingWon/Balance_Up"
+  - "jhparkland/Carbon-friendly"
+  - "datascience-labs/COCL"
+  - "y00ns/BI_project"
+  - "y00ns/FDIA_with_TCN"
